Adding pose detection, still got problems with CORS

--- a/src/html/recordPopup.html
+++ b/src/html/recordPopup.html
@@ -13,7 +13,7 @@
 
 <body>
     <button id="recordButton"></button>
-    <script src="recordPopup.js"></script>
+    <script src="recordPopup.bundle.js"></script>
 </body>
 
 </html>
