--- a/src/html/recordPopup.html
+++ b/src/html/recordPopup.html
@@ -5,14 +5,14 @@
     <style>
         button {
             height: 30px;
-            width: 30px;
+            width: 150px;
             outline: none;
         }
     </style>
 </head>
 
 <body>
-    <button id="recordButton"></button>
+    <button id="recordButton">Record that video</button>
     <script src="recordPopup.bundle.js"></script>
 </body>
 
